--- a/SearchFrontEnd/style.css
+++ b/SearchFrontEnd/style.css
@@ -1,8 +1,9 @@
 body {
-	font-family: Arial, sans-serif;
-	margin: 20px;
-	padding: 0;
-	background-color: #f4f4f4;
+    font-family: Arial, sans-serif;
+    margin: 20px auto;
+    padding: 0;
+    background-color: #f4f4f4;
+    max-width: 1280px;
 }
 
 h1 {
